Closed Bug 554850 Opened 14 years ago Closed 14 years ago

silence JSBool -> bool conversion warnings in msvc

Categories

(Core :: JavaScript Engine, defect)

x86
Windows Server 2003
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sayrer, Assigned: sayrer)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

some day we should rewrite all of these with static analysis
Attached patch !!Splinter Review
Assignee: general → sayrer
Attachment #434793 - Flags: review?(jwalden+bmo)
Attachment #434793 - Flags: review?(jwalden+bmo) → review+
http://hg.mozilla.org/tracemonkey/rev/82fdfc3438dd
Whiteboard: fixed-in-tracemonkey
http://hg.mozilla.org/mozilla-central/rev/82fdfc3438dd
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: