Bug 554850: silence JSBool -> bool conversion warnings in msvc. r=waldo